--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ body,
 
 .app {
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
   display: flex;
   flex-direction: column;
 }
